iter_language/tests/corpus/invalid/queue-sqs-bad-credentials-kind.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-sqs-bad-credentials-kind.iter
---
Error: unknown credentials kind `telepathy`
   ╭─[queue-sqs-bad-credentials-kind.iter:1:7]
   │
 1 │ queue sqs {
   │       ─┬─  
   │        ╰─── unknown credentials kind `telepathy`
   │ 
   │ Help: valid kinds: default, static, assume_role, profile, web_identity_token_file, imds, process
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-sqs-bad-credentials-kind.iter:1:1]
   │
 1 │ queue sqs {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
